<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.example.jack.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.18">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/display"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:gravity="center"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.10">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_margin="2sp"
            android:layout_weight="3">
        </View>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/delete"
            android:layout_weight="1"
            android:background="@color/gray"
            android:textSize="18sp"
            android:layout_margin="2sp"
            android:textAlignment="center"
            android:text="@string/deleteButton"
            android:onClick="clickBtn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.18">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sevenButton"
            android:layout_weight="0.25"
            android:background="@color/lightGray"
            android:layout_margin="2sp"
            android:textSize="35sp"
            android:text="@string/sevenKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:layout_margin="2sp"
            android:id="@+id/eightButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/eightKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.25"
            android:id="@+id/nineButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/nineKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/divideButton"
            android:layout_margin="2sp"
            android:background="@color/gray"
            android:textSize="35sp"
            android:text="@string/divideKey"
            android:onClick="clickBtn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.18">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/fourButton"
            android:layout_margin="2sp"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/fourKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_margin="2sp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/fiveButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/fiveKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.25"
            android:id="@+id/sixButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/sixKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.25"
            android:id="@+id/multiplyButton"
            android:background="@color/gray"
            android:textSize="35sp"
            android:text="@string/multiplyKey"
            android:onClick="clickBtn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.18">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:layout_margin="2sp"
            android:id="@+id/oneButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/oneKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:layout_margin="2sp"
            android:id="@+id/twoButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/twoKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:layout_margin="2sp"
            android:id="@+id/threeButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/threeKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_margin="2sp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:id="@+id/minusButton"
            android:background="@color/gray"
            android:textSize="35sp"
            android:text="@string/minusKey"
            android:onClick="clickBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.18">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:layout_margin="2sp"
            android:id="@+id/pointButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/pointKey" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.25"
            android:id="@+id/zeroButton"
            android:background="@color/lightGray"
            android:textSize="35sp"
            android:text="@string/zeroKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:layout_margin="2sp"
            android:id="@+id/equalsButton"
            android:background="@color/gray"
            android:textSize="35sp"
            android:text="@string/equalsKey"
            android:onClick="clickBtn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2sp"
            android:layout_weight="0.25"
            android:id="@+id/plusButton"
            android:background="@color/gray"
            android:textSize="35sp"
            android:text="@string/plusKey"
            android:onClick="clickBtn"/>
    </LinearLayout>

</LinearLayout>
